# rusty-board

./: readme.md
server/: Cargo.toml
server/src/: config.rs  main.rs
