[package]
name = "rusty-board-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "=4.0.0-beta.15" }
clap = { version = "=3.0.0-beta.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }

[dev-dependencies]
actix-http = { version = "=3.0.0-beta.16" }
actix-rt = { version = "^2.3" }